; ModuleID = '/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeRdbSave.c'
source_filename = "/home/carl/AnghaBench/redis/src/modules/extr_hellotype.c_HelloTypeRdbSave.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HelloTypeObject = type { i32, %struct.HelloTypeNode* }
%struct.HelloTypeNode = type { %struct.HelloTypeNode*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @HelloTypeRdbSave(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.HelloTypeObject*, align 8
  %6 = alloca %struct.HelloTypeNode*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.HelloTypeObject*
  store %struct.HelloTypeObject* %8, %struct.HelloTypeObject** %5, align 8
  %9 = load %struct.HelloTypeObject*, %struct.HelloTypeObject** %5, align 8
  %10 = getelementptr inbounds %struct.HelloTypeObject, %struct.HelloTypeObject* %9, i32 0, i32 1
  %11 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %10, align 8
  store %struct.HelloTypeNode* %11, %struct.HelloTypeNode** %6, align 8
  %12 = load i32*, i32** %3, align 8
  %13 = load %struct.HelloTypeObject*, %struct.HelloTypeObject** %5, align 8
  %14 = getelementptr inbounds %struct.HelloTypeObject, %struct.HelloTypeObject* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @RedisModule_SaveUnsigned(i32* %12, i32 %15)
  br label %17

17:                                               ; preds = %20, %2
  %18 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %19 = icmp ne %struct.HelloTypeNode* %18, null
  br i1 %19, label %20, label %29

20:                                               ; preds = %17
  %21 = load i32*, i32** %3, align 8
  %22 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %23 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @RedisModule_SaveSigned(i32* %21, i32 %24)
  %26 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %6, align 8
  %27 = getelementptr inbounds %struct.HelloTypeNode, %struct.HelloTypeNode* %26, i32 0, i32 0
  %28 = load %struct.HelloTypeNode*, %struct.HelloTypeNode** %27, align 8
  store %struct.HelloTypeNode* %28, %struct.HelloTypeNode** %6, align 8
  br label %17

29:                                               ; preds = %17
  ret void
}

declare dso_local i32 @RedisModule_SaveUnsigned(i32*, i32) #1

declare dso_local i32 @RedisModule_SaveSigned(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
